# BIG_BOFF

./: .gitignore  _ALERTS.json  _HUB.md  _PULSE.json  package-lock.json
.history/: _BIG PLAN_20251119130205.md  _BIG PLAN_20260208154441.md  bosser avec claude_20260201165444.md  bosser avec claude_20260201225127.md  bosser avec claude_20260205151848.md  bosser avec claude_20260205164609.md  bosser avec claude_20260205234236.md  bosser avec claude_20260207062904.md  bosser avec claude_20260207213327.md  bosser avec claude_20260207220133.md  bosser avec claude_20260208004955.md
.history/CLAUDE/: .env_20260208194916  Claude_20260207164617.md  Claude_20260207212045.md  Claude_20260208045417.md  Claude_20260209072637.md  Claude_20260209072643.md  Claude_20260209072805.md  Intentions_20260207221111.md  Intentions_20260207231628.md  Intentions_20260208004955.md  Intentions_20260208012336.md  _AUTO_BRIEF_20260208194504.md  env_20260208204009.txt  env_20260208230302.txt
CHATS/: chatgpt_permissions_systeme_validees.json
CLAUDE/: Claude.md  Intentions.md  PROCESS.md  STANDARDS.md  _AUTO_BRIEF.md  _CRON.md  _MOVES_LOG.md  _PROJETS.md
CLAUDE/DROPBOX/: CHAT_PIPELINE_AGENCE.md  CHAT_SEARCH.md  chatgpt_ai_seo_.json  chatgpt_reseau_social_inverse.json  notes.md
CLAUDE/PIPELINE/: _SUIVI.md  config.py  dispatcher.py  notifier.py  orchestrator.py  parser.py
CLAUDE/TODO/: BRIEF_TIP_CALCULATOR.md  VALIDATION_BRIEF_AI_SEO_AUDIT.html  VALIDATION_BRIEF_AI_SEO_AUDIT_V2.html
INTERAGENTS/: INTERAGENTS_PLAN.json  README.md  _ONE_PATH.md  install_all_chantiers.sh  install_chantier.sh  tree-INTERAGENTS.md
INTERAGENTS/TOOL/: LIBRARY  fix_and_run_sublym.sh  theme_rules_v1.json  tree-TOOL.md
INTERAGENTS/TOOL/AGENCY_OBJECTS/AGENCY_OBJECTS_STEP3/: README.md  pyproject.toml
INTERAGENTS/TOOL/AGENCY_OBJECTS/AGENCY_OBJECTS_STEP3/agency_objects/: __init__.py  cli.py  method.py  mrg.py  object.py  registry.py  scenario.py  walker.py
INTERAGENTS/TOOL/AGENCY_OBJECTS/AGENCY_OBJECTS_STEP3/scripts/: init_workspace.sh
INTERAGENTS/TOOL/AGENCY_OBJECTS/AGENCY_OBJECTS_STEP3/tests/: test_get_or_create.py  test_method_hooks.py  test_mrg_and_walker.py  test_object.py
INTERAGENTS/_docs/: INTERAGENTS_MODE_D_EMPLOI.md  INTERAGENTS_ORCHESTRATION_NOTE.md  README.md  README2.md  TABLEAU_DE_LANCEMENT.md  VERSIONING_POLICY.md
Mickael/: CDC — AI_SEO_AUDIT.html
PROJETS/PERSO/: lettre_fred.php
PROJETS/PRO/EURKAI/MODULES/brand_generator/: MANIFEST.json  _SUIVI.md  pyproject.toml
PROJETS/PRO/EURKAI/MODULES/brand_generator/brand_generator/: __init__.py  analyzer.py  direction_builder.py  generator.py  router.py  schemas.py
PROJETS/PRO/EURKAI/MODULES/conversational_brief/: MANIFEST.json  _SUIVI.md  pyproject.toml
PROJETS/PRO/EURKAI/MODULES/conversational_brief/conversational_brief/: __init__.py  agent.py
PROJETS/PRO/EURKAI/MODULES/design_dna_resolver/: MANIFEST.json  _SUIVI.md  pyproject.toml
PROJETS/PRO/EURKAI/MODULES/design_dna_resolver/design_dna_resolver/: __init__.py  archetype_inference.py  brief_parser.py  concept_normalizer.py  dna_builder.py  router.py  schemas.py  style_mapper.py
PROJETS/PRO/EURKAI/MODULES/design_exploration_engine/: MANIFEST.json  _SUIVI.md  pyproject.toml
PROJETS/PRO/EURKAI/MODULES/design_exploration_engine/design_exploration_engine/: __init__.py  archetype_variator.py  direction_builder.py  direction_generator.py  palette_variator.py  router.py  schemas.py  typography_variator.py
PROJETS/PRO/EURKAI/MODULES/logo_generator/: MANIFEST.json  _SUIVI.md  pyproject.toml
PROJETS/PRO/EURKAI/MODULES/logo_generator/logo_generator/: __init__.py  arbitration.py  exporter.py  generator.py  prompt_builder.py  router.py  schemas.py  vector_optimizer.py
PROJETS/PRO/EURKAI/MODULES/palette_generator/: MANIFEST.json  _SUIVI.md  pyproject.toml
PROJETS/PRO/EURKAI/MODULES/palette_generator/palette_generator/: __init__.py  bw_palette_generator.py  color_scale_generator.py  color_utils.py  contrast_validator.py  generator.py  harmony_engine.py  metal_palette_generator.py  palette_exporter.py  palette_scenarios.py  router.py  schemas.py
PROJETS/PRO/EURKAI/MODULES/scan_and_do/: MANIFEST.json  _SUIVI.md  pyproject.toml
PROJETS/PRO/EURKAI/MODULES/scan_and_do/scan_and_do/: __init__.py  catalog.py  engine.py  stub.py
PROJETS/PRO/EURKAI/MODULES/scan_and_do/tests/: test_scan_and_do.py
PROJETS/PRO/EURKAI/MODULES/visual_consistency_validator/: MANIFEST.json  _SUIVI.md  pyproject.toml
PROJETS/PRO/EURKAI/MODULES/visual_consistency_validator/visual_consistency_validator/: __init__.py  icon_style_checker.py  layout_checker.py  palette_checker.py  router.py  schemas.py  scoring_engine.py  typography_checker.py  validator.py  visual_style_checker.py
TOOLS/: .pulse_state.json  crontab.backup  pulse.py  validation.json  validation_receiver.py
TOOLS/MAINTENANCE/: catalogue.db-shm  catalogue.db-wal  catalogue.py  cron_claude.sh  (+3 more)
_CORBEILLE_SECURITE/: _INVENTAIRE.csv  _MANIFESTE.md
(+2565 files in other folders)
