[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "conversational_brief"
version = "0.1.0"
description = "Module EURKAI standalone — conversation guidée (LLM) pour produire un JSON structuré depuis un brief"
requires-python = ">=3.11"
dependencies = ["anthropic>=0.20"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["conversational_brief*"]
