[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "design_exploration_engine"
version = "0.1.0"
description = "Module EURKAI standalone — génère plusieurs directions créatives distinctes à partir d'un DesignDNA"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110", "pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["design_exploration_engine*"]
