[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "eurkai-scan-and-do"
version         = "0.1.0"
description     = "Moteur d'exécution générique — MVP de la Méthode Récursive Globale (MRG)"
requires-python = ">=3.10"
dependencies    = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scan_and_do*"]
