[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "visual_consistency_validator"
version = "0.1.0"
description = "Module EURKAI standalone — valide la cohérence de tous les assets visuels contre un DesignDNA"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110", "pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["visual_consistency_validator*"]
